--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br,en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alura Books</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="reset.css">
- <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -58,7 +59,101 @@
 
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"> <img src="img/Construct2.svg" alt="Livro sobre Construct2"></div>
+        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+        <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+        <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
+        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
+        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
+        <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro de Gestão"></div>
+
+      </div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+    </div>
+
+    <div class="card">
+      <!-- 1º linha-->
+      <div class="card__descrição">
+        <!-- 1º coluna -->
+        <div class="descriçao">
+          <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+          <p class="descrição__titulo-texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        </div>
+        <!-- 2º coluna -->
+        <img src="img/Angular.svg" class="descrição__imagem">
+      </div>
+      <!-- 2º linha-->
+      <div class="card__botoes">
+        <!-- 1º coluna-->
+        <ul class="botoes">
+          <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+          <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
+        </ul>
+        <!-- 2º coluna-->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
   </section>
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+        <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+        <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
+        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
+
+      </div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+    </div>
+
+    <div class="card">
+      <!-- 1º linha-->
+      <div class="card__descrição">
+        <!-- 1º coluna -->
+        <div class="descriçao">
+          <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+          <h3 class="descrição__titulo">Autora do Mês</h3>
+          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+          <p class="descrição__titulo-texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+        </div>
+        <!-- 2º coluna -->
+        <img src="img/autora.svg" class="descrição__imagem">
+      </div>
+      <!-- 2º linha-->
+      <div class="card__botoes">
+        <!-- 1º coluna-->
+        <ul class="botoes">
+          <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+          <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
+        </ul>
+        <!-- 2º coluna-->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
