--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +30,7 @@
           <a href="#" class="lista-menu__link">Programação</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Fornt-end</a>
+          <a href="#" class="lista-menu__link">Front-end</a>
         </li>
         <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Infraestrutura</a>
@@ -43,9 +44,17 @@
       </ul>
 
       <img src="img/Logo.svg" alt="logo da Alura Books" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
     </div>
+
+    <ul class="opções">
+      <li class="opções__item">Categorias</li>
+      <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+      <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+    </ul>
+
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos" class="container__imagem container__imagem-transparente"></a>
       <a href="#"><img src="img/Compras.svg" alt="minhas compras" class="container__imagem"></a>
       <a href="#"><img src="img/Usuário.svg" alt="meus usuarios" class="container__imagem"></a>
     </div>
@@ -187,7 +196,7 @@
     <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
     <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
   </section>
-  <hr/>
+  <hr />
   <footer class="rodape">
     <h2 class="rodape__titulo">Grupo Alura</h2>
   </footer>
