--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@
     <div class="container">
       <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"
           class="container__imagem container__imagem-transparente"></a>
-      <a href="#"><img src="img/Compras.svg" alt="minhas compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuário.svg" alt="meus usuarios" class="container__imagem"></a>
+      <a href="#" class="container__link">
+        <img src="img/Compras.svg" alt="minhas compras" class="container__imagem">
+        <p class="container__texto">Minha sacola</p>
+      </a>
+      <a href="#" class="container__link">
+        <img src="img/Usuário.svg" alt="meus usuarios" class="container__imagem">
+        <p class="container__texto">Meu perfil</p>
+      </a>
     </div>
   </header>
 
@@ -90,48 +96,50 @@
   <section class="carrossel">
     <h2 class="carrossel__titulo">Últimos lançamentos</h2>
     <!-- Slider main container -->
-    <div class="swiper">
-      <!-- If we need pagination -->
-      <div class="swiper-pagination"></div>
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide"> <img src="img/Construct2.svg" alt="Livro sobre Construct2"></div>
-        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
-        <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
-        <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
-        <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro de Gestão"></div>
+    <div class="carrossel__container">
+      <div class="swiper">
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide"> <img src="img/Construct2.svg" alt="Livro sobre Construct2"></div>
+          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+          <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+          <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
+          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
+          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
+          <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro de Gestão"></div>
 
-      </div>
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
-    </div>
-
-    <div class="card">
-      <!-- 1º linha-->
-      <div class="card__descrição">
-        <!-- 1º coluna -->
-        <div class="descriçao">
-          <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-          <p class="descrição__titulo-texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
         </div>
-        <!-- 2º coluna -->
-        <img src="img/Angular.svg" class="descrição__imagem">
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
       </div>
-      <!-- 2º linha-->
-      <div class="card__botoes">
-        <!-- 1º coluna-->
-        <ul class="botoes">
-          <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-          <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
-        </ul>
-        <!-- 2º coluna-->
-        <a href="#" class="botoes__ancora">Saiba mais</a>
+
+      <div class="card">
+        <!-- 1º linha-->
+        <div class="card__descrição">
+          <!-- 1º coluna -->
+          <div class="descriçao">
+            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+            <p class="descrição__titulo-texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+          </div>
+          <!-- 2º coluna -->
+          <img src="img/Angular.svg" class="descrição__imagem">
+        </div>
+        <!-- 2º linha-->
+        <div class="card__botoes">
+          <!-- 1º coluna-->
+          <ul class="botoes">
+            <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+            <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
+          </ul>
+          <!-- 2º coluna-->
+          <a href="#" class="botoes__ancora">Saiba mais</a>
+        </div>
       </div>
     </div>
   </section>
