--- a/index.html
+++ b/index.html
@@ -146,46 +146,49 @@
   <section class="carrossel">
     <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
     <!-- Slider main container -->
-    <div class="swiper">
-      <!-- If we need pagination -->
-      <div class="swiper-pagination"></div>
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
-        <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
-        <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
+    <div class="carrossel__container">
+      <div class="swiper">
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+          <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+          <div class="swiper-slide"><img src="img/UX.svg" alt="Livro de UX"></div>
+          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
 
-      </div>
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
-    </div>
-
-    <div class="card">
-      <!-- 1º linha-->
-      <div class="card__descrição">
-        <!-- 1º coluna -->
-        <div class="descriçao">
-          <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-          <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__titulo-texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
         </div>
-        <!-- 2º coluna -->
-        <img src="img/autora.svg" class="descrição__imagem">
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
       </div>
-      <!-- 2º linha-->
-      <div class="card__botoes">
-        <!-- 1º coluna-->
-        <ul class="botoes">
-          <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-          <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
-        </ul>
-        <!-- 2º coluna-->
-        <a href="#" class="botoes__ancora">Saiba mais</a>
+
+      <div class="card">
+        <!-- 1º linha-->
+        <div class="card__descrição">
+          <!-- 1º coluna -->
+          <div class="descriçao">
+            <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+            <h3 class="descrição__titulo">Autora do Mês</h3>
+            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <p class="descrição__titulo-texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+            </p>
+          </div>
+          <!-- 2º coluna -->
+          <img src="img/autora.svg" class="descrição__imagem">
+        </div>
+        <!-- 2º linha-->
+        <div class="card__botoes">
+          <!-- 1º coluna-->
+          <ul class="botoes">
+            <li class="botoes__item"> <img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+            <li class="botoes__item"> <img src="img/Compras.svg" alt="Comprar livro"></li>
+          </ul>
+          <!-- 2º coluna-->
+          <a href="#" class="botoes__ancora">Saiba mais</a>
+        </div>
       </div>
     </div>
   </section>
