--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="cabeçalho">
     <div class="container">
       <input type="checkbox" id="menu" class="container__botao">
-      <label for="menu">
+      <label for="menu" class="container__rotulo">
         <span class="cabeçalho__menu-hamburguer container__imagem"></span>
       </label>
 
@@ -49,7 +49,7 @@
 
     <ul class="opções">
       <input type="checkbox" id="opções-menu" class="opções__botao">
-      <label for="opções-menu">
+      <label for="opções-menu" class="opções__rotulo">
         <li class="opções__item">Categorias</li>
       </label>
       <ul class="lista-menu">
